# dataimport_aicare

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/dataimport_aicare/: __init__.py  data_loading.py  data_preprocessing.py  generate_extra_columns.py
